@@ -1,6 +1,9 @@
 2017-12-04  Kevin Ushey  <kevinushey@gmail.com>
 
-        * inst/include/Rcpp/api/meat/proxy.h: Protect temporary SEXP
+        * inst/include/Rcpp/RObject.h: Protect temporary wrapped SEXPs
+        * inst/include/Rcpp/api/meat/DataFrame.h: Idem
+        * inst/include/Rcpp/api/meat/Environment.h: Idem
+        * inst/include/Rcpp/api/meat/proxy.h: Idem
         * inst/include/Rcpp/proxy/ProtectedProxy.h: Idem
         * inst/include/Rcpp/vector/generic_proxy.h: Idem
 
